crates/reap-pm-core/tests/ui/pm_strategy_consumer_cannot_access_raw_auth.rs
use reap_pm_core::auth::PmAuth;
use reap_pm_core::credential::PmCredential;
use reap_pm_core::private_client::PmPrivateClient;
use reap_pm_core::raw_wire::PmRawWireClient;
use reap_pm_core::signer::PmSigner;

fn main() {}
